fixed NFT name too long on card

--- a/ui/src/components/CardNft/style.css
+++ b/ui/src/components/CardNft/style.css
@@ -76,6 +76,10 @@
   padding: 0px 5px;
 }
 
+.truncate {
+  text-overflow: ellipsis;
+}
+
 @media screen and (max-width: 800px) {
   .collection_info {
     font-size: 1rem;
